# go2_ws-

./: .clangd  .dockerignore  .env.example  .gitignore  .gitmodules  .graphifyignore  AGENTS.md  CLAUDE.md  DISTROBOX_SETUP.md  GEMINI.md  README.md  SESSION_DIARY.md  cyclonedds_laptop.xml  deploy_to_robot.sh  dev-deploy.sh  frames_2026-05-19_15.41.41.gv  frames_2026-05-21_11.54.28.gv  package-lock.json  sync_to_dog.sh  test_clangd.cpp
.cache/clangd/index/: Cdr.h.780A06A556A8C54A.idx  FastBuffer.h.629DF50B2F507997.idx  _audio_data_s.c.91A013A3CA736CAE.idx  _bms_cmd_s.c.11AE73A5C2AE8931.idx  _bms_state_s.c.0E14EC2C0FD5789E.idx  _error_s.c.6AC0EAE9C89FCEFF.idx  _go2_front_video_data_s.c.C2A53864FA8A7E59.idx  _height_map_s.c.3AF587C2CBCE0E3F.idx  _imu_state_s.c.24E8F564BE240543.idx  _interface_config_s.c.0C3D1B9270C6DE80.idx  _lidar_state_s.c.871C87FF7D9FFE21.idx  _low_cmd_s.c.340F9579161660DF.idx  _low_state_s.c.E02DE730054311CB.idx  _motor_cmd_s.c.67F42852BD9C2C97.idx  _motor_cmds_s.c.6ED1E4F5106AD6D3.idx  _motor_state_s.c.57F60A84E6F5D7DD.idx  _motor_states_s.c.C42E4EED6661EEFA.idx  _path_point_s.c.02FEEEF3AD455D95.idx  _req_s.c.A679BE87B7614B5F.idx  _request_header_s.c.3D8BB0464595BF62.idx  _request_identity_s.c.3A403BF37A0E9719.idx  _request_lease_s.c.FBAE53F9C3F032AC.idx  _request_policy_s.c.09F7D8E5E1FD9E14.idx  _request_s.c.82C4EFC16E011A0F.idx  _res_s.c.836BBA3F3D20BEFC.idx  _response_header_s.c.470EC517AA161E56.idx  _response_s.c.CA0654B7AD468C39.idx  _response_status_s.c.45797B4D054BADD6.idx  _sport_mode_cmd_s.c.0572550362A26AA4.idx  _sport_mode_state_s.c.77B883DAFDAF2485.idx  _time_spec_s.c.0D3A4E85DFFF8BD9.idx  _unitree_api_s.ep.rosidl_typesupport_c.c.9BDBA871D3923509.idx  _unitree_api_s.ep.rosidl_typesupport_fastrtps_c.c.386346F8A06395B5.idx  _unitree_api_s.ep.rosidl_typesupport_introspection_c.c.3AB78E8D4F4EE807.idx  _unitree_go_s.ep.rosidl_typesupport_c.c.F376CA421EF242AA.idx  _unitree_go_s.ep.rosidl_typesupport_fastrtps_c.c.39B7444DB0B06DB1.idx  _unitree_go_s.ep.rosidl_typesupport_introspection_c.c.6A42D088692FC9F4.idx  _uwb_state_s.c.3F7D37838BDC1BE4.idx  _uwb_switch_s.c.6F60849997622068.idx  _wireless_controller_s.c.4C2C3300673ABC15.idx  (+590 more)
.claude/skills/go2-deployment-pro/: SKILL.md
.claude/skills/go2-hardware-expert/: SKILL.md
.claude/skills/go2-nav-expert/: SKILL.md
.claude/skills/go2-nav-expert/references/: deployment.md  fast_lio_tuning.md  networking_setup.md
.claude/skills/ros2-expert/: SKILL.md
.devcontainer/: Dockerfile  cyclonedds_dev.xml  devcontainer.json  postCreateCommand.sh  ros_entrypoint.sh
.gemini/skills/docs-writer/: SKILL.md
.gemini/skills/go2-deployment-pro/: SKILL.md
.gemini/skills/go2-hardware-expert/: SKILL.md
.gemini/skills/go2-nav-expert/: SKILL.md
.gemini/skills/go2-nav-expert/references/: deployment.md  fast_lio_tuning.md  networking_setup.md
.gemini/skills/ros2-expert/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
.opencode/agents/: gemini-researcher.md
.tmp/external-context/colcon/: ros2-humble-install-linux.md
bags/: dump_stamps.py  inspect_cloud.py  map_stats.py  record_walk.sh  restamp_bag.py  run_2d_replay_test.sh
bags/bags/slam_20260603_172943/: metadata.yaml
bags/slam/: metadata.yaml
bags/slam2d_19700101_102247/: metadata.yaml
bags/slam2d_fixed_out/: map.pgm  map.yaml
bags/slam2d_level1_out/: map.pgm  map.yaml
bags/slam2d_res03_out/: map.pgm  map.yaml
bags/slam2d_ring_out/: map.pgm  map.yaml
bags/slam2d_timefixed/: metadata.yaml
bags/slam2d_tuned_out/: map.pgm  map.yaml
bags/static/: metadata.yaml
config/: allan_variance.csv  bmi088_config.yml  imu.yaml
docker/: Dockerfile  cyclonedds.xml  cyclonedds_laptop.xml  cyclonedds_laptop_wired.xml  docker-compose.yml  laptop_dds_env.sh  laptop_dds_env_wired.sh  ros_entrypoint.sh
docs/: lab_runbook_no_effective_points.md
docs/superpowers/plans/: 2026-04-09-single-command-startup.md  2026-05-21-fast-lio2-restore.md  2026-05-21-lidarslam-ros2-integration.md
docs/superpowers/specs/: 2026-04-09-single-command-startup-design.md  2026-05-21-fast-lio2-restore-design.md  2026-05-21-lidarslam-ros2-integration-design.md
docs/wiki/: SCHEMA.md
docs/wiki/pages/: _index.md  _log.md  overview.md
docs/wiki/pages/.obsidian/: app.json  graph.json  workspace.json
docs/wiki/pages/concepts/: 2d-map-tuning.md  clock-domain-mismatch.md  imu-tilt-compensation.md  motion-undistortion.md  offline-slam-replay.md  ptp-sync.md  slam.md  tf-tree.md  (+1 more)
docs/wiki/raw/: README.md
prompts/: glim_migration_prompt.md  glim_migration_prompt_v2.md
scripts/: dc-nvim.sh  save_lab_map.sh  setup_laptop_env.sh  verify_tf_tree.sh
src/fast_lio_ros2/: .pinned_commit
src/fast_lio_ros2/config/: hesai_xt16.yaml
src/fast_lio_ros2/src/: preprocess.cpp  preprocess.h
src/go2_nav_bridge/: CMakeLists.txt  package.xml
src/go2_nav_bridge/config/: nav2_params.yaml  pointcloud_to_laserscan.yaml  slam_toolbox_2d.yaml
src/go2_nav_bridge/config/glim/: config.json  config_ros.json  config_sensors.json
src/go2_nav_bridge/include/go2_nav_bridge/: bridge_utils.hpp
src/go2_nav_bridge/launch/: bringup.launch.py  mapping_2d.launch.py  mapping_2d_replay.launch.py  mapping_only.launch.py  nav2.launch.py  octomap.launch.py
src/go2_nav_bridge/src/: bridge_node.cpp  bridge_utils.cpp  map_odom_broadcaster.cpp  odom_tf_broadcaster.cpp  scan_preprocessor.cpp
src/go2_nav_bridge/test/: test_bridge_utils.cpp
src/hesai_ros_driver_2/config/: config.yaml
src/hesai_ros_driver_2/launch/: start.py
src/livox_ros_driver2/: CMakeLists.txt
(+14 files in other folders)
